# Schweiss-KI

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml  pyproject.toml.save  test.txt
configs/: pipeline.yaml
data/processed/test_geometry_00000005/: pointcloud.ply
data/synthetic/test_step_files/: nist_ctc_01_asme1_ap242-e1.ply
docs/: AP2.1_plan.md  AP2.1_structure.md
notebooks/: cmm_scan_exploration.ipynb  cmm_scan_exploration_old.ipynb  cmm_scan_prepocessing_exploration.ipynb  cmm_scan_segmentation_exploration.ipynb  preprocessing_exploration.ipynb
scripts/: run_pipeline.py  test_cad_conversion.py
src/schweiss_ki/core/: data_structures.py
src/schweiss_ki/pipeline/: pipeline.py
src/schweiss_ki/preprocessing/: __init__.py  base.py  downsampling.py  filtering.py  normalization.py  pipeline.py  report.py
src/schweiss_ki/segmentation/: __init__.py  background_remover.py  base.py  flank_segmenter.py  gap_classifier.py  labels.py
tests/: test_preprocessing.py  test_segmentation.py
