[project]
name = "schweiss-ki"
version = "0.1.0"
description = "AI-gestützte Schweißnaht-Qualitätskontrolle - AP2.1"
requires-python = ">=3.11"
dependencies = [
    "open3d>=0.18.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "client",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
client = { path = "../cad-api-client", editable = true }
